src/objects/Member_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Last_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Care_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Plan_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Care Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Activities</relationshipLabel>
        <relationshipName>Member_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Activities</relationshipLabel>
        <relationshipName>Member_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Removed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>assigned</fullName>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>completed</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>removed</fullName>
                    <label>Removed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Member Activity</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Member Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>